cabal-version:      2.4
name:               persistent-data-structures
version:            0.1.0.0
author:             Lan Kong
maintainer:         skqliao@gmail.com


executable array-vec
    main-is:          array-vec.hs
    ghc-options:      -O2
    build-depends:    base ^>=4.14.3.0, vector, time
    hs-source-dirs:   src
    default-language: Haskell2010

executable array-seq
    main-is:          array-seq.hs
    ghc-options:      -O2
    build-depends:    base ^>=4.14.3.0, containers, time
    hs-source-dirs:   src
    default-language: Haskell2010
